--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,7 @@
 applications:
-- name: customer-engagement-demo
+- services:
+  - my-ta-service
+  name: customer-engagement-demo
   command: npm start
   path: .
   memory: 512M
