adding cloudant dependency and updating version on watson-react-components dependency in package.json

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babelify": "^7.3.0",
     "body-parser": "^1.16.0",
     "cf-deployment-tracker-client": "^0.1.2",
+    "cloudant": "^1.7.1",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "express-browserify": "^1.0.2",
@@ -42,7 +43,7 @@
     "uglifyify": "^3.0.4",
     "underscore": "^1.8.3",
     "watson-developer-cloud": "^2.30.0",
-    "watson-react-components": "^0.6.3",
+    "watson-react-components": "^0.6.9",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
