adding cloudant service to manifest

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,7 @@
 applications:
 - services:
   - my-ta-service
+  - my-cloudant-service
   name: customer-engagement-demo
   command: npm start
   path: .
