--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "underscore": "^1.8.3",
     "watson-developer-cloud": "^2.30.0",
     "watson-react-components": "^0.6.9",
+    "watson-ui-components": "^0.6.0",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "casperjs": "^1.1.3",
+    "classnames": "^2.2.5",
     "codecov": "^1.0.1",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
