--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-secure-only": "^0.2.1",
     "express-status-monitor": "^0.1.9",
     "helmet": "^3.4.0",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.1",
     "morgan": "^1.7.0",
     "prismjs": "^1.6.0",
