--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "body-parser": "^1.16.0",
     "cf-deployment-tracker-client": "^0.1.2",
     "cloudant": "^1.10.0",
-    "dotenv": "^4.0.0",
+    "dotenv": "^5.0.1",
     "express": "^4.14.0",
     "express-browserify": "^1.0.2",
     "express-rate-limit": "^2.6.0",
     "express-react-views": "^0.10.2",
     "express-secure-only": "^0.2.1",
-    "express-status-monitor": "^0.1.9",
+    "express-status-monitor": "^1.0.1",
     "helmet": "^3.4.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.1",
@@ -53,7 +53,7 @@
     "test-integration": "casperjs test ./test/integration/test.*.js",
     "test-integration-runner": "NODE_ENV=test node casper-runner.js",
     "test": "npm run lint && npm run test-unit && npm run test-integration-runner",
-    "test-unit": "istanbul cover ./node_modules/mocha/bin/_mocha test/unit",
+    "test-unit": "mocha test/unit --exit",
     "lint": "eslint .",
     "autofix": "eslint --fix .",
     "codecov": "npm run test && (codecov || true)"
@@ -61,16 +61,15 @@
   "devDependencies": {
     "casperjs": "^1.1.3",
     "classnames": "^2.2.5",
-    "codecov": "^1.0.1",
-    "eslint": "^3.13.1",
-    "eslint-config-airbnb": "^14.0.0",
+    "codecov": "^3.0.2",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.8.2",
+    "mocha": "^5.1.1",
     "phantomjs-prebuilt": "^2.1.14",
-    "supertest": "^2.0.1"
+    "supertest": "^3.1.0"
   },
   "babel": {
     "presets": [
