feat: Add semantic releases and IAM support

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-TONE_ANALYZER_USERNAME=<username>
-TONE_ANALYZER_PASSWORD=<password>
+TONE_ANALYZER_USERNAME=<tone-analyzer-username>
+TONE_ANALYZER_PASSWORD=<tone-analyzer-password>
+TONE_ANALYZER_URL=<tone-analyzer-url>
+
+TONE_ANALYZER_IAM_APIKEY=<tone-analyzer-iam-apikey>
