--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,15 @@ env:
   - BX_SPACE=demos
 before_deploy: npm install -g bx-blue-green
 deploy:
-  provider: script
+- provider: script
   script:
   - bx-blue-green-travis
   on:
     branch: master
     repo: watson-developer-cloud/customer-engagement-nodejs
   skip_cleanup: true
-notifications:
-  email: false
+- provider: script
+  skip_cleanup: true
+  script: npx semantic-release
+  on:
+    node: 8
