--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "customer-engagement-demo",
+  "name": "@ibm-watson/customer-engagement-nodejs",
   "version": "1.0.0",
   "description": "Customer Engagement Demo",
   "engines": {
-    "node": ">=8.0",
-    "npm": ">5.0"
+    "node": ">=8.0"
   },
   "repository": {
     "type": "git",
@@ -24,27 +23,26 @@
     "babelify": "^7.3.0",
     "body-parser": "^1.16.0",
     "cloudant": "^1.10.0",
-    "dotenv": "^5.0.1",
+    "dotenv": "^6.0.0",
     "express": "^4.14.0",
     "express-browserify": "^1.0.2",
     "express-rate-limit": "^2.6.0",
     "express-react-views": "^0.10.2",
     "express-secure-only": "^0.2.1",
-    "express-status-monitor": "^1.0.1",
-    "helmet": "^3.4.0",
+    "express-status-monitor": "^1.1.5",
+    "helmet": "^3.13.0",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^3.1.1",
     "morgan": "^1.7.0",
-    "prismjs": "^1.6.0",
+    "prismjs": "^1.15.0",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-prism": "^4.0.0",
     "uglifyify": "^3.0.4",
-    "underscore": "^1.8.3",
-    "watson-developer-cloud": "^3.4.2",
-    "watson-react-components": "^0.6.9",
-    "watson-ui-components": "^0.6.0",
+    "underscore": "^1.9.1",
+    "watson-developer-cloud": "^3.7.0",
+    "watson-react-components": "^0.6.17",
+    "watson-ui-components": "^0.6.2",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
@@ -59,13 +57,13 @@
   },
   "devDependencies": {
     "casperjs": "^1.1.3",
-    "classnames": "^2.2.5",
-    "codecov": "^3.0.2",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
+    "classnames": "^2.2.6",
+    "codecov": "^3.0.4",
+    "eslint": "^5.2.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "mocha": "^5.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "supertest": "^3.1.0"
@@ -75,5 +73,9 @@
       "es2015",
       "react"
     ]
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   }
 }
