--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/watson-developer-cloud/customer-engagement-nodejs"
+    "url": "https://github.com/watson-developer-cloud/customer-engagement-nodejs.git"
   },
   "author": "IBM Corp.",
   "license": "Apache-2.0",
