--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,5 @@
 applications:
-- services:
-  - my-ta-service
-  - my-cloudant-service
-  name: customer-engagement-demo
+- name: customer-engagement-demo
   command: npm start
   path: .
   memory: 512M
