--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Customer Engagement Demo",
   "engines": {
-    "node": ">=8.0"
+    "node": ">=12.0"
   },
   "repository": {
     "type": "git",
@@ -15,33 +15,32 @@
     "url": "https://github.com/watson-developer-cloud/customer-engagement-nodejs/issues"
   },
   "dependencies": {
-    "babel-eslint": "^7.1.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "babelify": "^7.3.0",
-    "body-parser": "^1.16.0",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@babel/register": "^7.7.0",
+    "babel-eslint": "^10.0.3",
+    "babelify": "^10.0.0",
+    "body-parser": "^1.19.0",
     "cloudant": "^1.10.0",
-    "dotenv": "^6.0.0",
-    "express": "^4.14.0",
-    "express-browserify": "^1.0.2",
-    "express-rate-limit": "^2.6.0",
-    "express-react-views": "^0.10.2",
+    "core-js": "^3.4.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-browserify": "^1.0.3",
+    "express-rate-limit": "^5.0.0",
+    "express-react-views": "^0.11.0",
     "express-secure-only": "^0.2.1",
-    "express-status-monitor": "^1.1.5",
-    "helmet": "^3.13.0",
+    "helmet": "^3.21.2",
+    "ibm-watson": "^5.1.0",
     "isomorphic-fetch": "^2.2.1",
-    "morgan": "^1.7.0",
-    "prismjs": "^1.15.0",
-    "react": "^15.4.2",
-    "react-addons-pure-render-mixin": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "morgan": "^1.9.1",
+    "prismjs": "^1.17.1",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-prism": "^4.0.0",
-    "uglifyify": "^3.0.4",
-    "underscore": "^1.9.1",
-    "watson-developer-cloud": "^3.7.0",
-    "watson-react-components": "^0.6.17",
+    "regenerator-runtime": "^0.13.3",
+    "uglifyify": "^5.0.2",
+    "watson-react-components": "^0.6.19",
     "watson-ui-components": "^0.6.2",
     "whatwg-fetch": "^2.0.3"
   },
@@ -58,20 +57,25 @@
   "devDependencies": {
     "casperjs": "^1.1.3",
     "classnames": "^2.2.6",
-    "codecov": "^3.0.4",
-    "eslint": "^5.2.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.10.0",
-    "mocha": "^5.2.0",
-    "phantomjs-prebuilt": "^2.1.14",
-    "supertest": "^3.1.0"
+    "codecov": "^3.6.1",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "mocha": "^6.2.2",
+    "supertest": "^4.0.2"
   },
   "babel": {
     "presets": [
-      "es2015",
-      "react"
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "entry",
+          "corejs": "3.0.0"
+        }
+      ],
+      "@babel/preset-react"
     ]
   },
   "publishConfig": {
