--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ibm-watson": "^5.1.0",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.9.1",
+    "phantomjs-prebuilt": "^2.1.16",
     "prismjs": "^1.17.1",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
